--- a/chem440.html
+++ b/chem440.html
@@ -1,6 +1,10 @@
-{% extends "html/notes/notes_template.html" %}
-
-{% block contents %}
+<!doctype html>
+<html>
+<head>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/grace/grace.js"></script>
+</head>
+<body class="template contents" data-template-src="notes_template.html">
     <h1>CHEM 440 <a class="dt" href="">Molecular Dynamics</a> and its
         Applications</h1>
 
@@ -476,4 +480,5 @@
     <dd>(1/29)</dd>
     </dl>
 
-{% endblock contents %}
+</body>
+</html>
