--- a/math127.html
+++ b/math127.html
@@ -1,6 +1,10 @@
-{% extends "html/notes/notes_template.html" %}
-
-{% block contents %}
+<!doctype html>
+<html>
+<head>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/grace/grace.js"></script>
+</head>
+<body class="template contents" data-template-src="notes_template.html">
     <h1>MATH 127 Notes (Intro Calculus)</h1>
     
     <h2>Pre-requisites</h2>
@@ -29,4 +33,5 @@
     <ul>
         <li><a href="chem_harmonic_1d.html">1D case</a></li>
     </ul>
-{% endblock contents %}
+</body>
+</html>
