--- a/chem356.html
+++ b/chem356.html
@@ -1,6 +1,10 @@
-{% extends "html/notes/notes_template.html" %}
-
-{% block contents %}
+<!doctype html>
+<html>
+<head>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/grace/grace.js"></script>
+</head>
+<body class="template contents" data-template-src="notes_template.html">
     <h1>CHEM 356 Notes</h1>
     
     <h2>Some maths</h2>
@@ -26,4 +30,5 @@
     <ul>
         <li><a href="chem_harmonic_1d.html">1D case</a></li>
     </ul>
-{% endblock contents %}
+</body>
+</html>
