--- a/cs370.html
+++ b/cs370.html
@@ -1,6 +1,10 @@
-﻿{% extends "html/notes/notes_template.html" %}
-
-{% block contents %}
+﻿<!doctype html>
+<html>
+<head>
+    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="lib/grace/grace.js"></script>
+</head>
+<body class="template contents" data-template-src="notes_template.html">
     <h1>CS 370 Notes</h1>
     
     <h2>Floating point number systems</h2>
@@ -147,4 +151,5 @@
         
         <h3>Global and Local error</h3>
         <h3>Practical issues</h3>
-{% endblock contents %}
+</body>
+</html>
