--- a/chem_pitb_tunnelling.html
+++ b/chem_pitb_tunnelling.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
     <script src="lib/grace/grace.js"></script>
 </head>
 <body class="template contents" data-template-src="notes_template.html">
