--- a/notes_template.html
+++ b/notes_template.html
@@ -2,7 +2,7 @@
 <head>
     <link rel="stylesheet" href="default.css"/>
     <link rel="stylesheet" href="styles.css"/>
-    <script src="lib/jquery/dist/jquery.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 </head>
 <body>
     <div class="wrapper">
