un-wreck some of it

--- a/chem240.html
+++ b/chem240.html
@@ -1,31 +1,30 @@
 <!doctype html>
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="lib/grace/grace.js"></script>
+    <script src="node_modules/grace-js/grace.js"></script>
 </head>
 <body class="template contents" data-template-src="notes_template.html">
     <h1>CHEM 240: Mathematics for Chemistry</h1>
 
     <h2>Derivatives</h2>
-        <ul>
-            <li>$f'(x) = \lim_{x \to x_0} \frac{f(x) - f(x_0)}{x - x_0}$</li>
-            <li>$(x^n)' = nx^{n-1}$</li>
-            <li>$(\sin(ax))' = a\cos(ax)$</li>
-            <li>$(\cos(ax))' = -a\sin(ax)$</li>
-            <li>$(e^ax)' = ae^ax$</li>
-            <li>$(\ln ax)' = \frac{a}{x}$</li>
-            <li>$(\tan(x))' = \sec^2(x)$</li>
-            <li>L'Hopital's rule: if $\frac{0}{0}$ or $\frac{\infty}{\infty}$,
-                then $\lim_{x \to 0} \frac{f(x)}{g(x)} =
-                      \lim_{x \to 0} \frac{f'(x)}{g'(x)}$</li>
-        </ul>
+    <ul>
+        <li>$f'(x) = \lim_{x \to x_0} \frac{f(x) - f(x_0)}{x - x_0}$</li>
+        <li>$(x^n)' = nx^{n-1}$</li>
+        <li>$(\sin(ax))' = a\cos(ax)$</li>
+        <li>$(\cos(ax))' = -a\sin(ax)$</li>
+        <li>$(e^ax)' = ae^ax$</li>
+        <li>$(\ln ax)' = \frac{a}{x}$</li>
+        <li>$(\tan(x))' = \sec^2(x)$</li>
+        <li>L'Hopital's rule: if $\frac{0}{0}$ or $\frac{\infty}{\infty}$,
+            then $\lim_{x \to 0} \frac{f(x)}{g(x)} =
+                  \lim_{x \to 0} \frac{f'(x)}{g'(x)}$</li>
+    </ul>
 
     <h2>Multiple derivatives</h2>
-        <ul>
-            <li>$\frac{\partial^2y}{\partial x^2} =
-                \frac{\partial}{\partial x} (\frac{\partial y}{\partial x})$</li>
-            <li></li>
-        </ul>
+    <ul>
+        <li>$\frac{\partial^2y}{\partial x^2} =
+            \frac{\partial}{\partial x} (\frac{\partial y}{\partial x})$</li>
+        <li></li>
+    </ul>
 </body>
 </html>
