--- a/chem_uncertainty.html
+++ b/chem_uncertainty.html
@@ -1,14 +1,13 @@
 <!doctype html>
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="lib/grace/grace.js"></script>
+    <script src="node_modules/grace-js/grace.js"></script>
 </head>
 <body class="template contents" data-template-src="notes_template.html">
     <h1>CHEM 356 Notes</h1>
-    
+
     <h2>Heisenburg Uncertainty Principle</h2>
-        <p>The Heisenburg uncertainty principle states that 
+        <p>The Heisenburg uncertainty principle states that
             $\Delta x \Delta p_x \geq h$ for a particle in a 1D box.</p>
 
         <div class="math">$\begin{eqnarray*}
@@ -18,12 +17,12 @@
              \Delta p_x &=& 2 \frac{nh}{2L} \\
                         &=& \frac{nh}{L}\\
             \end{eqnarray*}$</div>
-        <p>You'll notice that the energy equation above had an extra $L$. 
+        <p>You'll notice that the energy equation above had an extra $L$.
             I have no idea why.</p>
 
         <p>Because the box is exactly $L$ wide, the max error for $x$ is $L$.</p>
         <div class="math">$\Delta x = L$</div>
-        
+
         <p>This gives you:</p>
         <div class="math">$\begin{eqnarray*}
              \Delta x \Delta p_x &=& L \cdot \frac{nh}{L} \\
