--- a/math227.html
+++ b/math227.html
@@ -1,8 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="lib/grace/grace.js"></script>
+    <script src="node_modules/grace-js/grace.js"></script>
 </head>
 <body class="template contents" data-template-src="notes_template.html">
     <h1>MATH 227 Notes</h1>
@@ -78,7 +77,7 @@
         </p>
 
     <h2>Lagrange Multipliers</h2>
-        
+
 
     <h2>Kepler's Laws</h2>
         <h3>Vector rules</h3>
