--- a/math228.html
+++ b/math228.html
@@ -1,12 +1,11 @@
 <!doctype html>
 <html>
 <head>
-    <script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-    <script src="lib/grace/grace.js"></script>
+    <script src="node_modules/grace-js/grace.js"></script>
 </head>
 <body class="template contents" data-template-src="notes_template.html">
     <h1>MATH 228 Notes</h1>
-    
+
     <h2>Prior knowledge</h2>
         <h3>Differentials</h3>
             $\frac{d}{dx}(ax^{n}) = ax^{n-1}$<br />
