un-wreck all of it

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <h1>Notes</h1>
 <ul>
     <li><a href="biol208.html">biol208.html</a></li>
+    <li><a href="chem240.html">chem240.html</a></li>
     <li><a href="chem331.html">chem331.html</a></li>
     <li><a href="chem440.html">chem440.html</a></li>
     <li><a href="chem_pitb_1d.html">chem_pitb_1d.html</a></li>
