--- a/math228.html
+++ b/math228.html
@@ -2,6 +2,10 @@
 <html>
 <head>
     <script src="node_modules/grace-js/grace.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+    <script type="text/x-mathjax-config">
+        MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
+    </script>
 </head>
 <body class="template contents" data-template-src="notes_template.html">
     <h1>MATH 228 Notes</h1>
