--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="node_modules/grace-js/grace.js"></script>
+    <script src="https://cdn.rawgit.com/1337/grace/master/grace.js"></script>
 </head>
 <body class="template contents" data-template-src="notes_template.html">
 <h1>Notes</h1>
