--- a/math228.html
+++ b/math228.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <head>
-    <script src="node_modules/grace-js/grace.js"></script>
+    <script src="https://cdn.rawgit.com/1337/grace/master/grace.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
     <script type="text/x-mathjax-config">
         MathJax.Hub.Config({tex2jax: {inlineMath: [['$','$'], ['\\(','\\)']]}});
